--- a/equitania/static/description/index.html
+++ b/equitania/static/description/index.html
@@ -1,22 +1,4 @@
-
-<section class="oe_container">
-    <div class="oe_row">
-	<h2 class="oe_slogan">Equitania Addon odoo v8.x Basis Version 1.0.0</h2>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32'>
-Odoo Addon, Open Source Management Solution <br>Copyright (C) 2014-TODAY Equitania Software GmbH (<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>)
-<br>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-You should have received a copy of the GNU Affero General Public License along with this program. If not, see http://www.gnu.org/licenses/.</p>
-        </div>
-    </div>
-</section>
-
-<h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.openerp24.de" target="_blank">www.openerp24.de</a></small><br></h3>
-        
+     
 
 <section class="oe_container">
     <div class="oe_row">
@@ -32,38 +14,30 @@ Bei der Auswahl einer Adresse wird die Adresstyp nun mit angezeigt. Dies erm&oum
     </div>
 </section>
 
-
 <section class="oe_container oe_dark">
     <div class="oe_row">
-       <h2 class="oe_slogan">Werbeblocker</h2>
-       <div class="oe_span6">
-            <p class='oe_mt32'>
-Die Werbung f&uuml;r SaaS bei OpenERP s.a. innerhalb von odoo wird dauerhaft ausgeblendet.
-Au&szlig;erdem wird ein "No Phoning home" aktiviert, welches ein regelm&auml;&szlig;iges aber &uuml;berfl&uuml;ssiges Signal deaktiviert.
-            </p>
+        <h2 class="oe_slogan">QWEB Reports</h2>
+        <div class="oe_span6">
+            Die Reports f&uuml;r Einkauf und Verkauf wurden f&uuml;r den deutschen Markt formatiert und angepasst.<br>
+            <img class="oe_picture oe_screenshot" src="fusszeile.png"><br>
+            <img class="oe_picture oe_screenshot" src="unternehmen.png">
         </div>
         <div class="oe_span6">
-            <img class="oe_picture" src="eq_werbeblocker.png">
+			<img class="oe_picture oe_screenshot" src="angebot.png"><img class="oe_picture oe_screenshot" src="rechnung.png"><br>
         </div>
-
+    </div>
+    <div class="oe_row">
+		<div class="oe_span6">
+            <p class='oe_mt32'>
+F&uuml;r die Reports gibt es unter den Einstellungen der Firmendaten nun Customfelder, die zur Darstellung der Gesch&auml;ftsf&uuml;hrer auf den Reports genutzt werden.
+		</div>
+		<div class="oe_span6">
+			<img class="oe_picture oe_screenshot" src="eq_geschaeftsfuehrer.png">
+		</div>
     </div>
 </section>
 
 <section class="oe_container">
-    <div class="oe_row">
-        <h2 class="oe_slogan">Erweiterte Firmendaten</h2>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="eq_geschaeftsfuehrer.png">
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32'>
-F&uuml;r die Reports gibt es unter den Einstellungen der Firmendaten nun Customfelder, die zur Darstellung der Gesch&auml;ftsf&uuml;hrer auf den Reports genutzt werden.
-            </p>
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
     <div class="oe_row">
        <h2 class="oe_slogan">Generierung von Kunden- Lieferanten- und Produktnummern</h2>
        <div class="oe_span6">
@@ -80,7 +54,7 @@ Beim Eintragen einer <strong>Debitorennummer</strong> oder <strong>Kreditorennum
     </div>
 </section>
 
-<section class="oe_container">
+<section class="oe_container oe_dark">
     <div class="oe_row">
         <h2 class="oe_slogan">Zeichnungsnummer f&uuml;r Produkte</h2>
         <div class="oe_span6">
@@ -94,7 +68,7 @@ F&uuml;r die Produkte kann nun auch eine Zeichnungsnummer hinterlegt werden.
     </div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
     <div class="oe_row">
        <h2 class="oe_slogan">Umstellung in den Einstellungen</h2>
        <div class="oe_span6">
@@ -108,7 +82,7 @@ Bei den Einstellungen in odoo werden im Standard die Seite APPs ge&ouml;ffnet. M
     </div>
 </section>
 
-<section class="oe_container">
+<section class="oe_container oe_dark">
     <div class="oe_row">
         <h2 class="oe_slogan">Produktsuche in den Preislisten-Versionen</h2>
         <div class="oe_span6">
@@ -122,5 +96,20 @@ Mit der neuen Suche k&ouml;nnen jetzt auch Produkte innerhalb einer Preislisten-
     </div>
 </section>
 
-<section class="oe_container oe_separator">
+<section class="oe_container">
+    <div class="oe_row" style="background-color:#f2f5fa;">
+        <div>
+            <p class='oe_mt32' style='padding:5px 10px 10px 10px!important;'>
+Odoo Addon, Open Source Management Solution <br>Copyright (C) 2014-TODAY Equitania Software GmbH (<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>)
+<br>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
+You should have received a copy of the GNU Affero General Public License along with this program. If not, see http://www.gnu.org/licenses/.</p>
+        <div class="oe_span6">
+            <img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
+        </div>
+        <div class="oe_span6">
+            <h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
+        </div>
+        </div>
+    </div>
 </section>
