Diverse Bugfixes. Picking Liste ergänzt.

--- a/eq_mail_extension/static/description/index.html
+++ b/eq_mail_extension/static/description/index.html
@@ -1,16 +1,7 @@
-
+     
 
 <section class="oe_container">
     <div class="oe_row">
-	<h2 class="oe_slogan">E-Mail Erweiterungsmodul</h2>
-        <div>
-            <p>
-           	Mit Hilfe dieses Modules lassen sich Postaus- und Eingangsserver f&uuml;r jeden User einzeln konfigurieren.
-           	Im Standard ist dies nicht möglich, so dass es zu Fehlern beim Empfang kommen kann.
-           	Sollte f&uuml;r einen Benutzer kein Postausgansserver definiert sein, so wird der des Administrators verwenden.
-           	Aus diesem Grund muss man f&uuml;r den Administrator dringend einen Postausgangsserver erstellen, sonst kommt es zu Fehlermeldungen.
-            </p>
-        </div>
+	<h2 class="oe_slogan">With this Module you can define an Outgoing Mail Server for each user and a Default Mails Server that will be used for System E-Mails and every User who got no Outgoing Mail Server configured.</h2>
     </div>
 </section>
-
