[IMP] -call the snom phone via javascript and added a description

--- a/eq_snom/static/description/index.html
+++ b/eq_snom/static/description/index.html
@@ -2,6 +2,7 @@
 
 <section class="oe_container">
     <div class="oe_row">
-	<h2 class="oe_slogan">Add you description in "YourModuleName/static/description/index.html".</h2>
+	<h3 class="oe_slogan">Adds snom-phone settings to the user preferences and call-buttons to the partner view (for phone and mobile).<br>
+    You can start calls directly from the partner view, by pressing the call-button </h3>
     </div>
 </section>
