--- a/eq_info_for_product_product/static/description/index.html
+++ b/eq_info_for_product_product/static/description/index.html
@@ -2,7 +2,31 @@
 
 <section class="oe_container">
     <div class="oe_row">
-    	<h3><small>Das Gewicht, Nettogewicht und Volumen werden von der Produktvorlage (product.template) zur Produktvariante (product.product) verschoben. Somit kann man diese Werte seperat für jede Produktvariante festlegen.</small></h3>
-    	<h3><small>Das Modul "report_intrastat" benutzt für seine Rechnungen weiterhin die Werte aus den Produktvorlagen.</small></h3>
+    	<h2 class="oe_slogan">Equitania Produktinformationen</h2>
+    	
+    	<ul>
+    		<li>Das Gewicht, Nettogewicht und Volumen werden von der Produktvorlage (product.template) zur Produktvariante (product.product) verschoben. Somit kann man diese Werte separat f&uuml;r jede Produktvariante festlegen.</li>
+    		<li>Das Modul "report_intrastat" benutzt f&uuml;r seine Rechnungen weiterhin die Werte aus den Produktvorlagen.</li>
+    	</ul>
+    </div>
+</section>
+
+
+
+<section class="oe_container">
+    <div class="oe_row" style="background-color:#f2f5fa;">
+        <div>
+            <p class='oe_mt32' style='padding:5px 10px 10px 10px!important;'>
+Odoo Addon, Open Source Management Solution <br>Copyright (C) 2014-TODAY Equitania Software GmbH (<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>)
+<br>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
+You should have received a copy of the GNU Affero General Public License along with this program. If not, see http://www.gnu.org/licenses/.</p>
+        <div class="oe_span6">
+            <img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
+        </div>
+        <div class="oe_span6">
+            <h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
+        </div>
+        </div>
     </div>
 </section>
