[CHG] eq_plain_reports: Descriptiondatei befüllt mit aktuellem Stand der Umsetzung und Anleitung zur Nutzung der Plain Reports (Briefpapier-Anpassungen)

--- a/eq_plain_reports/static/description/index.html
+++ b/eq_plain_reports/static/description/index.html
@@ -2,29 +2,62 @@
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-md-12">
 				<div>
 					<h1>Plain Reports</h1>
-					<h2 class="text-muted">Extension for clean equitania reports</h2>
 				</div>
 				<hr>
-				<p class="lead">Dieses Modul ermöglicht es die Standard Reports
-					auch ohne Kopf und Fu&szlig; Informationen zu drucken.</p>
+				<span class="lead">Dieses Modul erm&ouml;glicht es die
+					standard Reports auch ohne Kopf- und Fu&szlig;-Zeilen zu drucken.</span>
+				<p>F&uuml;r den Reportdruck auf eigenem Briefpapier.</p>
+				<hr>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-9">
-				<hr>
+			<div class="col-md-6">
+				<p class="mt16">
+					<strong>Fertige Reports als Briefpapier-Variante
+						verf&uuml;gbar:</strong>
+				</p>
+			</div>
+			<div class="col-md-6">
+				<ul>
+					<li>Rechnungen</li>
+					<li>Angebote</li>
+					<li>Lieferscheine</li>
+				</ul>
 			</div>
 		</div>
-		<div class="col-md-3">
-			<h3>Bl&ouml;cke umstylen</h3>
-			<p class="mb16">Jeder Block enth&auml;lt ggf. seine eigenen
-				Optionen.&nbsp;</p>
-			<img src="/theme_seileundmeer/static/description/customtool2.jpg"
-				class="img-responsive center-block">
+
+		<hr>
+		<div class="row">
+			<div class="col-md-6">
+				<p class="mt16">
+					<strong>Noch offene Reports:</strong>
+				</p>
+			</div>
+			<div class="col-md-6">
+				<ul>
+					<li>R&uuml;ck-Lieferscheine</li>
+					<li>Einkauf(+ Grundumbau)</li>
+					<li>Einkauf Anfrage(+ Grundumbau)</li>
+				</ul>
+			</div>
 		</div>
-	</div>
+		<hr>
+		<div class="row" style="background-color:#ffe1e1;">
+			<div class="col-md-12">
+				<p class="mt16 mb16">
+					<strong style="color: red;">Wichtig:</strong>
+				</p>
+				<p>
+					Nach der Installation des Moduls m&uuml;ssen die neuen Reports dem Papierformat noch zugeordnet
+					werden. Dies erledigt man hier:<br />
+					<strong>Einstellungen > Technisch > Berichte >
+						Papierformate</strong><br />W&auml;hlen Sie das Papierformat <strong>EQ European A4</strong>, wechseln in den <b>Bearbeiten Modus</b> und f&uuml;gen die Reports (typischerweise mit dem Wort "Briefpapier" im Namen) unter dem Bereich <b>Verbundene Reports</b> hinzu.
+				</p>
+			</div>
+		</div>
 	</div>
 </section>
 
@@ -54,7 +87,7 @@
 				<h3>
 					<small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173
 						Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br>
-					<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>
+						<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>
 						/ <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br>
 				</h3>
 			</div>
