[CHG] Description der Plain Reports aktualisiert

--- a/eq_plain_reports/static/description/index.html
+++ b/eq_plain_reports/static/description/index.html
@@ -7,8 +7,7 @@
 					<h1>Plain Reports</h1>
 				</div>
 				<hr>
-				<span class="lead">Dieses Modul erm&ouml;glicht es die
-					standard Reports auch ohne Kopf- und Fu&szlig;-Zeilen zu drucken.</span>
+				<span class="lead">Dieses Modul erm&ouml;glicht es die standard equitania Reports auch ohne Kopf- und Fu&szlig;-Zeilen zu drucken.</span>
 				<p>F&uuml;r den Reportdruck auf eigenem Briefpapier.</p>
 				<hr>
 			</div>
@@ -23,24 +22,10 @@
 			<div class="col-md-6">
 				<ul>
 					<li>Rechnungen</li>
-					<li>Angebote</li>
-					<li>Lieferscheine</li>
-				</ul>
-			</div>
-		</div>
-
-		<hr>
-		<div class="row">
-			<div class="col-md-6">
-				<p class="mt16">
-					<strong>Noch offene Reports:</strong>
-				</p>
-			</div>
-			<div class="col-md-6">
-				<ul>
-					<li>R&uuml;ck-Lieferscheine</li>
-					<li>Einkauf(+ Grundumbau)</li>
-					<li>Einkauf Anfrage(+ Grundumbau)</li>
+					<li>Angebote & Auftr&auml;ge</li>
+					<li>Lieferscheine & R&uuml;ck-Lieferscheine</li>
+					<li>Einkauf</li>
+					<li>Einkauf Anfrage</li>
 				</ul>
 			</div>
 		</div>
