--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -1,7 +1,41 @@
-     
-
 <section class="oe_container">
-    <div class="oe_row">
-	<h2 class="oe_slogan">Add you description in "YourModuleName/static/description/index.html".</h2>
+    <div class="oe_row oe_spaced">
+        <div class="oe_span12">
+            <h2 class="oe_slogan">EQ Google Shopping Feed</h2>
+        </div>
+
+        <div class="oe_span12">
+            <p class='oe_mt32' style='font-size:14px;'>
+               Das Modul erm&ouml;glicht es, dass man Shopping Feeds f&uuml;r die Produkte im Backend von Odoo anlegen kann
+               und diese Produkte in den Suchergebnissen von Google auftauchen.               
+		    </p>
+		    <br>
+		    <p style='font-size:14px'> Weitere Informationen:<a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">https://equitania.atlassian.net/wiki/x/SIAZ</a> </p>
+        </div>
     </div>
 </section>
+
+<section class="oe_container">
+    <div class="oe_row" style="background-color:#f2f5fa;">
+        <div class="oe_span6">
+            <img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
+        </div>
+    </div>
+</section>
+        
+<section class="oe_container">
+<br>
+	<div class="oe_span12">
+    	<h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
+    </div>
+</section>
+
+<br />
+<br/>
+<br />
+<section class="oe_span12" style='margin-top:25px'>
+	  <div>
+		<h3><small>Copyright .....<br></small></h3>
+	</div>
+</section>
+
