[CHG] Korrektur indes.html

--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -1,41 +1,66 @@
 <section class="oe_container">
-    <div class="oe_row oe_spaced">
-        <div class="oe_span12">
-            <h2 class="oe_slogan">EQ Google Shopping Feed</h2>
-        </div>
+	<div class="oe_row oe_spaced">
+		<div class="oe_span12">
+			<h2 class="oe_slogan">EQ Google Shopping Feed</h2>
+		</div>
 
-        <div class="oe_span12">
-            <p class='oe_mt32' style='font-size:14px;'>
-               Das Modul erm&ouml;glicht es, dass man Shopping Feeds f&uuml;r die Produkte im Backend von Odoo anlegen kann
-               und diese Produkte in den Suchergebnissen von Google auftauchen.               
-		    </p>
-		    <br>
-		    <p style='font-size:14px'> Weitere Informationen:<a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">https://equitania.atlassian.net/wiki/x/SIAZ</a> </p>
-        </div>
-    </div>
+		<div class="oe_span12">
+			<p class='oe_mt32' style='font-size:14px;'>
+			Mit diesem Modul erweitern Sie Ihr Odoo System um den Google Shopping Feed.
+			</p>
+			<p style='font-size:14px'>Neben der Pflege in Odoo müssen Sie sich dazu bei Google registieren: <a href="http://www.google.de/ads/shopping/" target="_blank">http://www.google.de/ads/shopping/</a></p>
+			<p>
+			<li> Es erweitert die Produktdarstellung um die Taxonomie Vorgaben von Google
+			<li> Ausgabe der Daten als XML Feed
+			</p>
+			<br>
+			<p style='font-size:14px'><a href="https://support.google.com/merchants/?hl=de#topic=" target="_blank">Das Modul orientiert sich an den Google Vorgaben.</a></p>
+			<br>
+			<br>
+			<p style='font-size:14px'>Weitere Informationen:<a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
+			<br>
+			<br>
+		</div>
+	</div>
 </section>
 
 <section class="oe_container">
-    <div class="oe_row" style="background-color:#f2f5fa;">
-        <div class="oe_span6">
-            <img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
-        </div>
-    </div>
+	<div class="oe_row" style="background-color:#f2f5fa;">
+		<div class="oe_span6">
+			<img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
+	</div>
+	</div>
 </section>
-        
+
 <section class="oe_container">
 <br>
 	<div class="oe_span12">
-    	<h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
-    </div>
+		<h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
+	</div>
 </section>
 
-<br />
 <br/>
-<br />
+<br/>
+<br/>
 <section class="oe_span12" style='margin-top:25px'>
-	  <div>
-		<h3><small>Copyright .....<br></small></h3>
+	<div>
+		<h3><small>
+		Odoo Addon, Open Source Management Solution<br>
+		Copyright (C) 2014-now Equitania Software GmbH(<http://www.equitania.de>)<br>
+		<br>
+		This program is free software: you can redistribute it and/or modify<br>
+		it under the terms of the GNU Affero General Public License as<br>
+		published by the Free Software Foundation, either version 3 of the<br>
+		License, or (at your option) any later version.<br>
+		<br>
+		This program is distributed in the hope that it will be useful,<br>
+		but WITHOUT ANY WARRANTY; without even the implied warranty of<br>
+		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>
+		GNU Affero General Public License for more details.<br>
+		<br>
+		You should have received a copy of the GNU Affero General Public License<br>
+		along with this program.  If not, see <http://www.gnu.org/licenses/>.<br>
+		</small></h3>
 	</div>
 </section>
 
