Vorlage Beschreibung von Modulen

--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -1,14 +1,14 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div class="oe_span12">
-			<h2 class="oe_slogan">EQ Google Shopping Feed</h2>
+			<h2 class="oe_slogan">Equitania Google Shopping Feed</h2>
 		</div>
 
 		<div class="oe_span12">
 			<p class='oe_mt32' style='font-size:14px;'>
 			Mit diesem Modul erweitern Sie Ihr Odoo System um den Google Shopping Feed.
 			</p>
-			<p style='font-size:14px'>Neben der Pflege in Odoo müssen Sie sich dazu bei Google registieren: <a href="http://www.google.de/ads/shopping/" target="_blank">http://www.google.de/ads/shopping/</a></p>
+			<p style='font-size:14px'>Neben der Pflege in Odoo m&uuml;ssen Sie sich dazu bei Google registieren: <a href="http://www.google.de/ads/shopping/" target="_blank">http://www.google.de/ads/shopping/</a></p>
 			<p>
 			<li> Es erweitert die Produktdarstellung um die Taxonomie Vorgaben von Google
 			<li> Ausgabe der Daten als XML Feed
@@ -17,7 +17,7 @@
 			<p style='font-size:14px'><a href="https://support.google.com/merchants/?hl=de#topic=" target="_blank">Das Modul orientiert sich an den Google Vorgaben.</a></p>
 			<br>
 			<br>
-			<p style='font-size:14px'>Weitere Informationen:<a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
+			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
 			<br>
 			<br>
 		</div>
@@ -35,7 +35,14 @@
 <section class="oe_container">
 <br>
 	<div class="oe_span12">
-		<h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
+		<p class='oe_mt32' style='font-size:14px;'>
+			Equitania Software GmbH<br>
+			Weiherstrasse 13<br>
+			75173 Pforzheim<br>
+			Germany<br>
+			Telefon +49 7231 16604 0<br>
+			<a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a>
+		</p>
 	</div>
 </section>
 
@@ -43,10 +50,10 @@
 <br/>
 <br/>
 <section class="oe_span12" style='margin-top:25px'>
-	<div>
-		<h3><small>
+	<div class="oe_span12">
+		<p class='oe_mt32' style='font-size:10px;'>
 		Odoo Addon, Open Source Management Solution<br>
-		Copyright (C) 2014-now Equitania Software GmbH(<http://www.equitania.de>)<br>
+		Copyright (C) 2014-now Equitania Software GmbH - Pforzheim/Germany<br>
 		<br>
 		This program is free software: you can redistribute it and/or modify<br>
 		it under the terms of the GNU Affero General Public License as<br>
@@ -59,8 +66,8 @@
 		GNU Affero General Public License for more details.<br>
 		<br>
 		You should have received a copy of the GNU Affero General Public License<br>
-		along with this program.  If not, see <http://www.gnu.org/licenses/>.<br>
-		</small></h3>
+		along with this program.  If not, see <a href="http://www.gnu.org/licenses" target="_blank">http://www.gnu.org/licenses</a>.
+		</p>
 	</div>
 </section>
 
