--- a/equitania/static/description/index.html
+++ b/equitania/static/description/index.html
@@ -1,115 +1,78 @@
-     
-
 <section class="oe_container">
-    <div class="oe_row">
-	<h2 class="oe_slogan">Erweiterte Ansicht von Adressen</h2>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="eq_adressart.png">
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32'>
-Bei der Auswahl einer Adresse wird die Adresstyp nun mit angezeigt. Dies erm&ouml;glicht z.B: eine klarere Zuweisung von Rechnungs- und Lieferadressen.
-            </p>
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_row">
-        <h2 class="oe_slogan">QWEB Reports</h2>
-        <div class="oe_span6">
-            Die Reports f&uuml;r Einkauf und Verkauf wurden f&uuml;r den deutschen Markt formatiert und angepasst.<br>
-            <img class="oe_picture oe_screenshot" src="fusszeile.png"><br>
-            <img class="oe_picture oe_screenshot" src="unternehmen.png">
-        </div>
-        <div class="oe_span6">
-			<img class="oe_picture oe_screenshot" src="angebot.png"><img class="oe_picture oe_screenshot" src="rechnung.png"><br>
-        </div>
-    </div>
-    <div class="oe_row">
-		<div class="oe_span6">
-            <p class='oe_mt32'>
-F&uuml;r die Reports gibt es unter den Einstellungen der Firmendaten nun Customfelder, die zur Darstellung der Gesch&auml;ftsf&uuml;hrer auf den Reports genutzt werden.
+	<div class="oe_row oe_spaced">
+		<div class="oe_span12">
+			<h2 class="oe_slogan">Equitania Erweiterungspaket</h2>
 		</div>
-		<div class="oe_span6">
-			<img class="oe_picture oe_screenshot" src="eq_geschaeftsfuehrer.png">
-		</div>
-    </div>
-</section>
 
-<section class="oe_container">
-    <div class="oe_row">
-       <h2 class="oe_slogan">Generierung von Kunden- Lieferanten- und Produktnummern</h2>
-       <div class="oe_span6">
-            <p class='oe_mt32'>
-Beim Eintragen einer <strong>Debitorennummer</strong> oder <strong>Kreditorennummer</strong> wird nun gepr&uuml;ft ob die Nummer schon vergeben ist. Es wird ein Unique-Feld in der DB erzeugt. Kundennummern werden DATEV-Konform ab 10.000 bis 69.999 gebildet. Lieferantennummern ab 70.000. Au&szlig;erdem kann man auch eine Nummer generieren lassen, die automatisch hochz&auml;hlt auf die n&auml;chste verf&uuml;gbare Nummer.
-            </p>
-            <p class='oe_mt32'>Bei den <strong>Produktnummern</strong> kann ein Pr&auml;fix von 2-3 Zeichen verwendet werden. Die anstehende Nummer wird gepr&uuml;ft und ggf. hochgez&auml;hlt. Die Nummerngenerierung wird mittels Sequenze odoo-Konform umgesetzt.
+		<div class="oe_span12">
+			<p class='oe_mt32' style='font-size:14px;'>
+			Mit diesem Modul erweitern Sie Ihr Odoo System Funktionalit&auml;ten, die im deutschsprachigen Raum unverzichtbar sind.<br>
+			<br>
+			Folgende Bereiche werden erweitert
 			</p>
-        </div>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="eq_nummerngenerierung.jpg">
-<img class="oe_picture oe_screenshot" src="eq_produktnummer.png">
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_row">
-        <h2 class="oe_slogan">Zeichnungsnummer f&uuml;r Produkte</h2>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="eq_zeichnungsnummer.png">
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32'>
-F&uuml;r die Produkte kann nun auch eine Zeichnungsnummer hinterlegt werden.
-            </p>
-        </div>
-    </div>
+			<p>
+			<li> Adressen
+			<li> Produkte
+			<li> Verkauf
+			<li> Einkauf
+			<li> Lager 
+			<li> Reports & Berichte
+			<li> &Uuml;bersetzungen
+			<li> Dezimalstellen & Nummerngenerierung
+			<li> und viele weitere Bereiche..
+			</p>
+			<br>
+			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://leanpub.com/odoo-kochbuch/read#equitania" target="_blank">Odoo Kochbuch</a> </p>
+			<br>
+			<br>
+		</div>
+	</div>
 </section>
 
 <section class="oe_container">
-    <div class="oe_row">
-       <h2 class="oe_slogan">Umstellung in den Einstellungen</h2>
-       <div class="oe_span6">
-            <p class='oe_mt32'>
-Bei den Einstellungen in odoo werden im Standard die Seite APPs ge&ouml;ffnet. Mit unserer Erweiterung wird stattdessen als Startseite der Einstellungen die lokal installierten Apps angezeigt. Dies spar Ladezeit beim &ouml;ffnen der Einstellungen.
-            </p>
-        </div>
-        <div class="oe_span6">
-            <img class="oe_picture" src="eq_settingspage.png">
-        </div>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_row">
-        <h2 class="oe_slogan">Produktsuche in den Preislisten-Versionen</h2>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="eq_preisliste-versionensuche.png">
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32'>
-Mit der neuen Suche k&ouml;nnen jetzt auch Produkte innerhalb einer Preislisten-Version gesucht werden.
-            </p>
-        </div>
-    </div>
+	<div class="oe_row" style="background-color:#f2f5fa;">
+		<div class="oe_span6">
+			<img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
+	</div>
+	</div>
 </section>
 
 <section class="oe_container">
-    <div class="oe_row" style="background-color:#f2f5fa;">
-        <div>
-            <p class='oe_mt32' style='padding:5px 10px 10px 10px!important;'>
-Odoo Addon, Open Source Management Solution <br>Copyright (C) 2014-TODAY Equitania Software GmbH (<a href="http://www.equitania.de" target="_blank">www.equitania.de</a>)
-<br>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-You should have received a copy of the GNU Affero General Public License along with this program. If not, see http://www.gnu.org/licenses/.</p>
-        <div class="oe_span6">
-            <img src="EquitaniaLogo.png" style="height: 76px; width: 360px; ">
-        </div>
-        <div class="oe_span6">
-            <h3><small>Equitania Software GmbH<br>Weiherstrasse 13<br>75173 Pforzheim<br>Germany<br>Telefon +49 7231 16604 0<br><a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a></small><br></h3>
-        </div>
-        </div>
-    </div>
+<br>
+	<div class="oe_span12">
+		<p class='oe_mt32' style='font-size:14px;'>
+			Equitania Software GmbH<br>
+			Weiherstrasse 13<br>
+			75173 Pforzheim<br>
+			Germany<br>
+			Telefon +49 7231 16604 0<br>
+			<a href="http://www.equitania.de" target="_blank">www.equitania.de</a> / <a href="http://www.myodoo.de" target="_blank">www.myodoo.de</a>
+		</p>
+	</div>
 </section>
+
+<br/>
+<br/>
+<br/>
+<section class="oe_span12" style='margin-top:25px'>
+	<div class="oe_span12">
+		<p class='oe_mt32' style='font-size:10px;'>
+		Odoo Addon, Open Source Management Solution<br>
+		Copyright (C) 2014-now Equitania Software GmbH - Pforzheim/Germany<br>
+		<br>
+		This program is free software: you can redistribute it and/or modify<br>
+		it under the terms of the GNU Affero General Public License as<br>
+		published by the Free Software Foundation, either version 3 of the<br>
+		License, or (at your option) any later version.<br>
+		<br>
+		This program is distributed in the hope that it will be useful,<br>
+		but WITHOUT ANY WARRANTY; without even the implied warranty of<br>
+		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>
+		GNU Affero General Public License for more details.<br>
+		<br>
+		You should have received a copy of the GNU Affero General Public License<br>
+		along with this program.  If not, see <a href="http://www.gnu.org/licenses" target="_blank">http://www.gnu.org/licenses</a>.
+		</p>
+	</div>
+</section>
+
