--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -12,6 +12,10 @@
 			<p>
 			<li> Es erweitert die Produktdarstellung um die Taxonomie Vorgaben von Google
 			<li> Ausgabe der Daten als XML Feed
+			<li> Deutschland: www.MeineDomain.de/google_shopping_feed/data_de.xml
+			<li> &uuml;sterreich: www.MeineDomain.at/google_shopping_feed/data_at.xml			
+			<li> Schweiz: www.MeineDomain.ch/google_shopping_feed/data_ch.xml
+			<li> Englisch: www.MeineDomain.com/google_shopping_feed/data_en.xml
 			</p>
 			<br>
 			<p style='font-size:14px'><a href="https://support.google.com/merchants/?hl=de#topic=" target="_blank">Das Modul orientiert sich an den Google Vorgaben.</a></p>
