[CHG] -Modulbeschreibung Google Shopping Feed um den Kurzlink zum Wiki ergänzt

--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -21,7 +21,7 @@
 			<p style='font-size:14px'><a href="https://support.google.com/merchants/?hl=de#topic=" target="_blank">Das Modul orientiert sich an den Google Vorgaben.</a></p>
 			<br>
 			<br>
-			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
+			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://equitania.atlassian.net/wiki/x/EIBvAQ" target="_blank">MyOdoo Modul Google Shopping Feed WIKI</a> </p>
 			<br>
 			<br>
 		</div>
