[FIX] -Modulbeschreibung Ü in Ö geändert

--- a/eq_google_shopping_feed/static/description/index.html
+++ b/eq_google_shopping_feed/static/description/index.html
@@ -13,7 +13,7 @@
 			<li> Es erweitert die Produktdarstellung um die Taxonomie Vorgaben von Google
 			<li> Ausgabe der Daten als XML Feed
 			<li> Deutschland: www.MeineDomain.de/google_shopping_feed/data_de.xml
-			<li> &uuml;sterreich: www.MeineDomain.at/google_shopping_feed/data_at.xml			
+			<li> &Ouml;sterreich: www.MeineDomain.at/google_shopping_feed/data_at.xml			
 			<li> Schweiz: www.MeineDomain.ch/google_shopping_feed/data_ch.xml
 			<li> Englisch: www.MeineDomain.com/google_shopping_feed/data_en.xml
 			</p>
