[CHG] - Modulicon und Beschreibung angepasst.

--- a/eq_mail_extension/static/description/index.html
+++ b/eq_mail_extension/static/description/index.html
@@ -8,11 +8,13 @@
 			<p class='oe_mt32' style='font-size:14px;'>
 			Dieses Modul korrigiert die Mailfunktionalit&auml;t von Odoo.
 			</p>
-			<p>
-			<li> Deaktiviert Catchall
-			<li> Deaktiviert Alias
-			<li> Erm&ouml;glicht die Verkn&uuml;pfung pro Benutzer mit einem E-Mailaccount f&uuml;r ausgehende und eingehende Mails
-			</p>
+			<ul>
+			<li> Deaktiviert Catchall</li>
+			<li> Deaktiviert Alias</li>
+			<li> Erm&ouml;glicht die Verkn&uuml;pfung pro Benutzer mit einem E-Mailaccount f&uuml;r ausgehende und eingehende Mails</li>
+			</ul>
+			
+			
 			<br>
 			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
 			<br>
