[CHG] - Beschreibung des Moduls

--- a/eq_googlemap/static/description/index.html
+++ b/eq_googlemap/static/description/index.html
@@ -1,15 +1,12 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div class="oe_span12">
-			<h2 class="oe_slogan">eq_googlemap</h2>
+			<h2 class="oe_slogan">Equitania Google Map</h2>
 		</div>
 
 		<div class="oe_span12">
 			<p class='oe_mt32' style='font-size:14px;'>
-			eq_googlemap - Initialer Commit des Moduls eq_googlemap. Das Modul erweitert die Ansicht unter "Einstellungen -> Konfiguration -> Website" um neues Feld für GoogleMapsAPI
-			</p>
-			<p>
-			</p>
+			Initialer Commit des Moduls eq_googlemap. Das Modul erweitert die Ansicht unter "Einstellungen > Konfiguration > Website" um neues Feld f&uuml;r die Google Maps API.			</p>
 			<br>
 			<p style='font-size:14px'>Die Dokumentation zum Modul finden Sie hier: <a href="https://equitania.atlassian.net/wiki/x/SIAZ" target="_blank">MyOdoo Modul WIKI</a> </p>
 			<br>
